--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ coverage
 
 /cypress/videos/
 /cypress/screenshots/
-
+/data/webs/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
